# realtime_nkf_aec

./: CMakeLists.txt  README.md  main.cpp  weights_and_biases.txt
modules/: CMakeLists.txt  activations.cpp  activations.h  complex_gru.cpp  complex_gru.h  gru.cpp  gru.h  gru_test.cpp  kgnet.cpp  kgnet.h  matrix_helper.cpp  matrix_helper.h  nkf.cpp  nkf.h  signalsmith-fft.h  simd_size.h
